Prevent overflow

--- a/ui/src/Components/Load/Bar.scss
+++ b/ui/src/Components/Load/Bar.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 5px;
   transition: background 100ms ease-in-out;
+  overflow: hidden;
   border-radius: 10px;
 
   &.small-true div {
@@ -15,7 +16,7 @@
     position: absolute;
     width: 50%;
     height: inherit;
-    background:var(--accentColor);
+    background: var(--accentColor);
     border-radius: 10px;
     animation: barLoad 1500ms cubic-bezier(0.85, 0, 0.15, 1) infinite;
     border-color: var(--accentColor);
